--- a/app.json
+++ b/app.json
@@ -6,8 +6,9 @@
     "pages/mine/mine",
     "pages/mine/order/order",
     "pages/mine/help/help",
-    "pages/mine/help/helpdetail/helpdetail"
-  ],
+    "pages/mine/help/helpdetail/helpdetail",
+    "pages/charge/charge"
+    ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
